.tanzu/config/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: hello-world-route
  annotations:
    healthcheck.gslb.tanzu.vmware.com/service: hello-world
    healthcheck.gslb.tanzu.vmware.com/path: /
    healthcheck.gslb.tanzu.vmware.com/port: 8080
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: default-gateway
      sectionName: http-hello-world #use https for TLS
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: hello-world
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
